# imu_utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
data/: 16448_imu_param.yaml  A3_imu_param.yaml  N3_imu_param.yaml  data_16448_acc_t.txt  data_16448_acc_x.txt  data_16448_acc_y.txt  data_16448_acc_z.txt  data_16448_gyr_t.txt  data_16448_gyr_x.txt  data_16448_gyr_y.txt  data_16448_gyr_z.txt  data_16448_sim_acc_x.txt  data_16448_sim_acc_y.txt  data_16448_sim_acc_z.txt  data_16448_sim_gyr_x.txt  data_16448_sim_gyr_y.txt  data_16448_sim_gyr_z.txt  data_16448_sim_x.txt  data_16448_sim_z.txt  data_16448_t.txt  data_16448_x.txt  data_16448_y.txt  data_16448_z.txt  data_A3_acc_t.txt  data_A3_acc_x.txt  data_A3_acc_y.txt  data_A3_acc_z.txt  data_A3_gyr_t.txt  data_A3_gyr_x.txt  data_A3_gyr_y.txt  data_A3_gyr_z.txt  data_A3_sim_acc_x.txt  data_A3_sim_acc_y.txt  data_A3_sim_acc_z.txt  data_A3_sim_gyr_t.txt  data_A3_sim_gyr_x.txt  data_A3_sim_gyr_y.txt  data_A3_sim_gyr_z.txt  data_A3_sim_x.txt  data_A3_sim_y.txt  (+71 more)
launch/: 16448.launch  A3.launch  gx4.launch  n3.launch  tum.launch  xsens.launch
sample_data/: data_16448_acc_x.txt  data_16448_acc_y.txt  data_16448_acc_z.txt  data_16448_gyr_x.txt  data_16448_gyr_y.txt  data_16448_gyr_z.txt  data_16448_sim_acc_x.txt  data_16448_sim_acc_y.txt  data_16448_sim_acc_z.txt  data_16448_sim_gyr_t.txt  data_16448_sim_gyr_x.txt  data_16448_sim_gyr_y.txt  data_16448_sim_gyr_z.txt  data_16448_sim_y.txt  data_16448_x.txt  data_A3_acc_x.txt  data_A3_acc_y.txt  data_A3_acc_z.txt  data_A3_gyr_x.txt  data_A3_gyr_y.txt  data_A3_gyr_z.txt  data_A3_sim_acc_t.txt  data_A3_sim_acc_x.txt  data_A3_sim_acc_y.txt  data_A3_sim_acc_z.txt  data_A3_sim_gyr_x.txt  data_A3_sim_gyr_y.txt  data_A3_sim_gyr_z.txt  data_A3_sim_x.txt  data_A3_sim_y.txt  data_A3_sim_z.txt  data_A3_x.txt  data_A3_y.txt  data_A3_z.txt  data_N3_acc_t.txt  data_N3_acc_x.txt  data_N3_acc_y.txt  data_N3_acc_z.txt  data_N3_gyr_x.txt  data_N3_gyr_y.txt  (+32 more)
scripts/: Copy_of_draw_allan.m  Untitled.m  all_of_draw_allan.m  all_of_draw_allan_acc.m  allan_with_degree.m  avg_of_all_sensors.m  avg_of_all_sensors_acc.m  draw_all.m  draw_allan.m  fit_allan.m
src/: gyro_an.cpp  gyro_an2.cpp  imu_an.cpp  sss.cpp  type.h  utils.h
src/acc_lib/: allan_acc.cpp  allan_acc.h  fitallan_acc.cpp  fitallan_acc.h
src/gyr_lib/: allan_gyr.cpp  allan_gyr.h  fitallan_gyr.cpp  fitallan_gyr.h
src/gyro_lib/: allan.cpp  allan.h  allan_acc.cpp  allan_acc.h  fitallan.cpp  fitallan.h  utils.h
